--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
 	<body>
 		<header>
+			<img src="world3.png" alt="Icon" id="header-icon" />
 			<h1>World Database Lookup</h1>
 		</header>
 
 		<main>
 			<div id="controls">
-				<label for="country">Country:</label>
+				<!-- <label for="country">Country:</label> -->
 				<input id="country" type="search" name="country" placeholder="Enter country name" />
 				<button id="lookup">Lookup</button>
 			</div>
